[gd_scene load_steps=4 format=3 uid="uid://1ug712tid640"]

[ext_resource type="Script" path="res://game/scenes/menus/Freeplay.gd" id="1_xub5q"]
[ext_resource type="Texture2D" uid="uid://bph4x7dl8bvv" path="res://assets/images/menuDesat.png" id="2_j3wpw"]
[ext_resource type="FontFile" uid="uid://csunsdevou3rf" path="res://assets/fonts/vcr.ttf" id="3_vuq8a"]

[node name="Freeplay" type="Node2D"]
script = ExtResource("1_xub5q")

[node name="MenuBG" type="Sprite2D" parent="."]
position = Vector2(640, 361)
texture = ExtResource("2_j3wpw")

[node name="SongInfo" type="CanvasLayer" parent="."]

[node name="ScoreBG" type="ColorRect" parent="SongInfo"]
self_modulate = Color(1, 1, 1, 0.6)
offset_left = 937.0
offset_right = 1280.0
offset_bottom = 66.0
color = Color(0, 0, 0, 1)

[node name="Score" type="Label" parent="SongInfo"]
layout_direction = 3
offset_left = 34.0
offset_top = 5.0
offset_right = 338.0
offset_bottom = 34.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_vuq8a")
theme_override_font_sizes/font_size = 32
text = "Personal Best: 0"
horizontal_alignment = 2

[node name="Difficulty" type="Label" parent="SongInfo"]
offset_left = 1039.0
offset_top = 39.0
offset_right = 1151.0
offset_bottom = 61.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_vuq8a")
theme_override_font_sizes/font_size = 24
text = "< NORMAL >"
horizontal_alignment = 1
vertical_alignment = 1
